--- a/03-TAD_evolution.Rmd
+++ b/03-TAD_evolution.Rmd
@@ -1,19 +1,16 @@
 # Stability of TADs in evolution {#TAD-evolution}
 
-This chapter is published as preprint on bioRxiv and currently under Review at BMC Biology:
-
-**Evolutionary stability of topologically associating domains is
-associated with conserved gene regulation**  
-Jan Krefting^1,2^, Miguel A. Andrade-Navarro^1,2^ and *Jonas Ibn-Salem*^1,2,\#^
-
-^1^Faculty of Biology, Johannes Gutenberg University of Mainz, 55128
-Mainz, Germany
-^2^Institute of Molecular Biology, 55128 Mainz, Germany
-\# corresponding author
-
-Availible online: https://doi.org/10.1101/231431 
-
-For contributions to this chapter see Table \@ref(tab:Contribution).
+###  Preamble {-}
+> 
+> This chapter is submitted as a corresponding-author paper to BMC Biology and currently under review. A preprint is published at bioRxiv:
+>
+> Krefting J, Andrade-Navarro MA, **Ibn-Salem J**. **_Evolutionary stability of topologically associating domains is associated with conserved gene regulation_**. bioRxiv. 2017. [doi:doi.org/10.1101/231431](https://doi.org/10.1101/231431).
+> 
+> The preprint is availible online: https://doi.org/10.1101/231431.
+> My contributions to this publication is indicated in Table \@ref(tab:contribution). 
+> The source code of the complete analysis is available at GitHub: https://github.com/Juppen/TAD-Evolution.
+> Supplementary figures and links to supplementary tables are shown in Appendix \@ref(sup-TAD-evolution).
+> 
 
 
 ###  Abstract {-}
